--- a/views/list.ejs
+++ b/views/list.ejs
@@ -6,10 +6,12 @@
 
   <div class="box">
     <% for (let i=0; i<newListItems.length; i++) { %>
+      <form action="/delete" method="POST">
       <div class="item">
         <input type="checkbox">
         <p><%=  newListItems[i]  %></p>
       </div>
+    </form>
       <% } %>
 
       <form class="item" action="/" method="post">
