--- a/views/list.ejs
+++ b/views/list.ejs
@@ -8,7 +8,7 @@
     <% for (let i=0; i<newListItems.length; i++) { %>
       <form action="/delete" method="POST">
       <div class="item">
-        <input type="checkbox">
+        <input type="checkbox" value="<%= newListItems[i] %>" name="checkbox" onchange="this.form.submit()">
         <p><%=  newListItems[i]  %></p>
       </div>
     </form>
